fix aligns, icons, ticket list and order summary

--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -316,11 +316,23 @@ input {
       padding: 10px 0;
       margin: 0 5px;
       flex-direction: row;
+      div:first-child {
+        margin-right: auto;
+      }
+      div:last-child {
+        margin-left: auto;
+      }
     }
     .total-row {
       padding: 10px 0;
       margin: 0 5px;
       flex-direction: row;
+      div:first-child {
+        margin-right: auto;
+      }
+      div:last-child {
+        margin-left: auto;
+      }
     }
     .order-discounts {
       color: green;
