--- a/src/styles/order-detail-page.less
+++ b/src/styles/order-detail-page.less
@@ -74,7 +74,7 @@
         margin-top: 10px;
       }
       div:last-child {
-        text-align: right;
+        margin-left: auto;
         align-self: center;
         font-size: 1.5em;
       }
@@ -187,6 +187,9 @@
         h4 {
           margin-bottom: 0px;
         }
+      }
+      div:nth-child(3) {
+        margin-top: 0px;
       }
       .status {
         margin-top: 10px;
