--- a/src/styles/popup-form.less
+++ b/src/styles/popup-form.less
@@ -222,7 +222,10 @@
   
   .popup-header{
     .popup-icons {            
-      width: 20%;      
+      width: 20%;
+      i {
+        margin-left: 10px;
+      }
     }
   }
 
