--- a/src/styles/tickets-list-page.less
+++ b/src/styles/tickets-list-page.less
@@ -56,7 +56,7 @@
           }
         }        
         div:last-child {
-          text-align: right;
+          margin-left: auto;
           align-self: center;
           font-size: 1.5em;
         }
